<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NuevoPrestamoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/viewCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_cliente" />

        <EditText
            android:id="@+id/txtCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:labelFor="@+id/viewCliente"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/viewMonto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_monto" />

        <EditText
            android:id="@+id/txtMonto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:labelFor="@+id/viewMonto"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/viewCantCuota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_cant_uota" />

        <EditText
            android:id="@+id/txtCantCuota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:labelFor="@+id/viewCantCuota"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/viewPorcentaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_porcentaje" />

        <EditText
            android:id="@+id/txtPorcentaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:labelFor="@+id/viewPorcentaje"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnGuarda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_guarda"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>